tests/paczka1/fuzzy1/14287262.err
Error in line 1: X2kByy7CnS S473 28,0
Error in line 10: S473 S473 221,1
Error in line 22: 0YdG S473 -1,2
Error in line 17: 0YdG S473 76,2
Error in line 21: IOpx11sVX S196 66,6
Error in line 36: ogn<qMrBgqL S6<< 83,9
